# plasmoid-Tao

./: CHANGES  README.md  build.sh  tao-widget.plasmoid  test.sh
.agent/rules/: install.md
.agent/skills/kde-plasma-widget-dev/: SKILL.md
.gemini/: skills
.github/workflows/: build-plasmoid.yml
build_cpp/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  ecm_uninstall.cmake
build_cpp/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_cpp/taoplugin_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build_cpp/taoplugin_autogen/UVLADIE3JM/: moc_TaoPlugin.cpp  moc_TaoPlugin.cpp.d  moc_TaoQGraphClaude.cpp  moc_TaoQGraphClaude.cpp.d  moc_TaoQGraphGemini.cpp  moc_TaoQGraphGemini.cpp.d  moc_TaoQGraphHybrid.cpp  moc_TaoQGraphHybrid.cpp.d  moc_TaoQuickItem.cpp  moc_TaoQuickItem.cpp.d
conductor/: product-guidelines.md  product.md  tech-stack.md
tao-widget/: CMakeLists.txt  metadata.json  qmldir
tao-widget/contents/code_example/: tao.cpp
tao-widget/contents/config/: config.qml  configmodel.xml  main.xml
tao-widget/contents/ui/: NativeRenderer.qml  WebRenderer.qml  config.qml  configClock.qml  configGeneral.qml  main.qml  tao.html  webgl.html
tao-widget/contents/ui/config/: ZenCheck.qml  configAppearance.qml  configClock.qml  configGeneral.qml  configGlow.qml  configParticles.qml  configTao.qml
tao-widget/contents/ui/native/: qmldir
tao-widget/contents/ui/native/shaders/: particle.frag.qsb  particle.vert.qsb
tao-widget/src/: TaoNew.cpp  TaoNew.h  TaoPlugin.cpp  TaoPlugin.h  TaoQGraphClaude.cpp  TaoQGraphClaude.h  TaoQGraphGemini.cpp  TaoQGraphGemini.h  TaoQGraphHybrid.cpp  TaoQGraphHybrid.h  TaoQuickItem.cpp  TaoQuickItem.h
tao-widget/src/shaders/: particle.frag  particle.vert
